--- a/Templates/ConsumptionFunctionApp.json
+++ b/Templates/ConsumptionFunctionApp.json
@@ -50,8 +50,7 @@
         "location": "[resourceGroup().location]",
         "kind": "functionapp",
         "dependsOn": [
-          "[resourceId('Microsoft.Web/serverfarms', variables('hostingPlanName'))]",
-          "[resourceId('Microsoft.Storage/storageAccounts', variables('storageAccountName'))]"
+          "[resourceId('Microsoft.Web/serverfarms', variables('hostingPlanName'))]"
         ],
         "properties": {
           "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', variables('hostingPlanName'))]",
