--- a/Templates/WebAppSourceControl.json
+++ b/Templates/WebAppSourceControl.json
@@ -5,16 +5,10 @@
     "appName": {
       "type": "string"
     },
-    "repositoryURL": {
+    "packageUri": {
       "type": "string",
       "metadata": {
         "description": "The URL for the GitHub repository that contains the project to deploy."
-      }
-    },
-    "branch": {
-      "type": "string",
-      "metadata": {
-        "description": "The branch of the GitHub repository to use."
       }
     }
   },
@@ -23,15 +17,21 @@
   },
   "resources": [
         {
-          "type": "Microsoft.Web/sites/sourcecontrols",
-          "apiVersion": "2019-08-01",
-          "name": "[concat(parameters('appName'),'/web')]",
+          "name": "[concat(parameters('appName'),'/MSDeploy')]",
+          "type": "Microsoft.Web/sites/extensions",
           "location": "[resourceGroup().location]",
+          "apiVersion": "2015-08-01",
           "dependsOn": [],
+          "tags": {
+            "displayName": "SampleFunctionAppPackage"
+          },
           "properties": {
-            "repoUrl": "[parameters('repositoryURL')]",
-            "branch": "[parameters('branch')]",
-            "isManualIntegration": true
+            "packageUri": "[parameters('packageUri')]",
+            "dbType": "None",
+            "connectionString": "",
+            "setParameters": {
+              "IIS Web Application Name": "[parameters('appName')]"
+            }
           }
         }
     ]
