Web app settings

--- a/Templates/ConsumptionFunctionApp.json
+++ b/Templates/ConsumptionFunctionApp.json
@@ -79,6 +79,11 @@
               {
                 "name": "FUNCTIONS_WORKER_RUNTIME",
                 "value": "[variables('functionWorkerRuntime')]"
+              },
+              {
+                "name": "WEBSITE_RUN_FROM_PACKAGE",
+                "value": "1",
+                "slotSetting": false
               }
             ]
           }
