--- a/Templates/ConsumptionFunctionApp.json
+++ b/Templates/ConsumptionFunctionApp.json
@@ -21,12 +21,24 @@
         "metadata": {
           "description": "The language worker runtime to load in the function app."
         }
+      },
+      "appSettings": {
+          "type": "array"
       }
     },
     "variables": {
       "functionAppName": "[parameters('appName')]",
       "hostingPlanName": "[parameters('appName')]",
-      "functionWorkerRuntime": "[parameters('runtime')]"
+      "copy": [
+            {
+                "name": "appSettings",
+                "count": "[length(parameters('appSettings'))]",
+                "input": {
+                    "name": "[split(parameters('appSettings')[copyIndex('appSettings')],'|')[0]]",
+                    "value": "[split(parameters('appSettings')[copyIndex('appSettings')],'|')[0]]"
+                }
+            }
+        ]
     },
     "resources": [
       {
@@ -55,37 +67,7 @@
         "properties": {
           "serverFarmId": "[resourceId('Microsoft.Web/serverfarms', variables('hostingPlanName'))]",
           "siteConfig": {
-            "appSettings": [
-              {
-                "name": "AzureWebJobsStorage",
-                "value": "[parameters('saConnectionString')]"
-              },
-              {
-                "name": "WEBSITE_CONTENTAZUREFILECONNECTIONSTRING",
-                "value": "[parameters('saConnectionString')]"
-              },
-              {
-                "name": "WEBSITE_CONTENTSHARE",
-                "value": "[toLower(variables('functionAppName'))]"
-              },
-              {
-                "name": "FUNCTIONS_EXTENSION_VERSION",
-                "value": "~3"
-              },
-              {
-                "name": "WEBSITE_NODE_DEFAULT_VERSION",
-                "value": "~10"
-              },
-              {
-                "name": "FUNCTIONS_WORKER_RUNTIME",
-                "value": "[variables('functionWorkerRuntime')]"
-              },
-              {
-                "name": "WEBSITE_RUN_FROM_PACKAGE",
-                "value": "1",
-                "slotSetting": false
-              }
-            ]
+            "appSettings": "[variables('appSettings')]"
           }
         }
       }
