--- a/Templates/ConsumptionFunctionApp.json
+++ b/Templates/ConsumptionFunctionApp.json
@@ -3,10 +3,7 @@
     "contentVersion": "1.0.0.0",
     "parameters": {
       "appName": {
-        "type": "string",
-        "metadata": {
-          "description": "The name of the function app that you wish to create."
-        }
+        "type": "string"
       },
       "appSettings": {
           "type": "array"
