--- a/Templates/ConsumptionFunctionApp.json
+++ b/Templates/ConsumptionFunctionApp.json
@@ -52,6 +52,9 @@
           "siteConfig": {
             "appSettings": "[variables('appSettings')]"
           }
+        },
+        "identity": {
+            "type": "SystemAssigned"
         }
       }
     ]
