--- a/Templates/WebAppSourceControl.json
+++ b/Templates/WebAppSourceControl.json
@@ -10,6 +10,9 @@
       "metadata": {
         "description": "The URL for the GitHub repository that contains the project to deploy."
       }
+    },
+    "packageBranch": {
+      "type": "string",
     }
   },
   "variables": {
@@ -17,16 +20,15 @@
   },
   "resources": [
         {
-          "name": "[concat(parameters('appName'),'/MSDeploy')]",
-          "type": "Microsoft.Web/sites/extensions",
-          "location": "[resourceGroup().location]",
           "apiVersion": "2015-08-01",
+          "name": "[concat(parameters('appName'),'/web')]",
+          "type": "Microsoft.Web/sites/sourcecontrols",
           "dependsOn": [],
-          "tags": {
-            "displayName": "SampleFunctionAppPackage"
-          },
           "properties": {
-            "packageUri": "[parameters('packageUri')]"
+              "RepoUrl": "[parameters('packageUri')]",
+              "branch": "[parameters('packageBranch')]",
+              "publishRunbook": true,
+              "IsManualIntegration": true
           }
         }
     ]
